--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-nn
-nn-dbg
+nn*
+nndbg*
 build/
 CMakeLists.txt.user
 t10k-images-idx3-ubyte
 t10k-labels-idx1-ubyte
 train-images-idx3-ubyte
 train-labels-idx1-ubyte
+.DS_Store
