Fix main3, now functionally equivalent to main2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,5 @@ cmake_minimum_required(VERSION 3.0.1)
 project(NeuralNet CXX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_executable(nn main.cpp)
+add_executable(nn2 main2.cpp)
+add_executable(nn3 main3.cpp)
