Start implementing conv layer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.0.1)
 project(NeuralNet CXX)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+find_package(Boost REQUIRED)
+set(Boost_USE_STATIC_LIBS OFF)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 add_executable(nn main.cpp)
 add_executable(nn2 main2.cpp)
 add_executable(nn3 main3.cpp)
+target_link_libraries(nn3 ${Boost_LIBRARIES})
