Debugging convolutional layer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 add_executable(nn main.cpp)
 add_executable(nn2 main2.cpp)
 add_executable(nn3 main3.cpp)
+add_executable(nn4 main4.cpp)
 target_link_libraries(nn3 ${Boost_LIBRARIES})
