Parallelise minibatch using TBB.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.0.1)
 project(NeuralNet CXX)
 find_package(Boost REQUIRED)
+find_path(TBB_HEADER tbb/tbb.h)
+find_library(TBB_LIBRARY tbb)
 set(Boost_USE_STATIC_LIBS OFF)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall")
 add_executable(nn main.cpp)
 add_executable(nn2 main2.cpp)
 add_executable(nn3 main3.cpp)
 add_executable(nn4 main4.cpp)
-target_link_libraries(nn3 ${Boost_LIBRARIES})
+target_link_libraries(nn3 ${Boost_LIBRARIES} ${TBB_LIBRARY})
