Add -pedantic compilation flag.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(Boost REQUIRED)
 find_path(TBB_HEADER tbb/tbb.h)
 find_library(TBB_LIBRARY tbb)
 set(Boost_USE_STATIC_LIBS OFF)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -march=native")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -pedantic -march=native")
 add_executable(fc    fc.cpp)
 add_executable(conv1 conv1.cpp)
 add_executable(conv2 conv2.cpp)
